[package]
name = "lis2dh12"
version = "0.6.5"
authors = ["Tomas Kukosa <tkeksa@gmail.com>"]
repository = "https://github.com/tkeksa/lis2dh12"
documentation = "https://docs.rs/lis2dh12"
license = "Apache-2.0 OR MIT"
description = "Platform-agnostic Rust driver for the LIS2DH12 accelerometer."
readme = "README.md"
keywords = ["accelerometer", "sensor", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2018"

exclude = [
  ".github",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
out_f32 = ["num-traits", "num-derive"]

[dependencies]
accelerometer = "0.12.0"
embedded-hal = "0.2.5"
cast = {version = "0.2.7", default-features = false }
num-traits = { version = "0.2.14", optional = true, default-features = false }
num-derive = { version = "0.3.3", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.7.2"

[profile.release]
lto = true
